...
            return DTO.RaceDetailInfo(
                title: "CRO Race — Stage 1", // l10n:ignore: mock data
                date: "01 October 2026",
                startTime: "12:00",
                classification: "2.1",
                category: "ME",
                distance: "134 km",
                departure: "Zagreb",
                arrival: "Zagreb",
                verticalMeters: "1200",
                profileURL: nil
            )
        }
...
